--- a/age calculator.html
+++ b/age calculator.html
@@ -71,7 +71,7 @@
 				}
         	}
 			
-			function phone()
+			function cell()
 		   {
             	var x=document.getElementById('PhNo').value;
 								
