time to release

--- a/age calculator.html
+++ b/age calculator.html
@@ -71,7 +71,7 @@
 				}
         	}
 			
-			function cell()
+			function cell()												<!-- changed from phone to cell -->
 		   {
             	var x=document.getElementById('PhNo').value;
 								
